--- a/appfolder/app/src/main/AndroidManifest.xml
+++ b/appfolder/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launchernope"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_roundnope"
         android:supportsRtl="true"
         android:theme="@style/Theme.Appfolder">
 
